Single VM: Enable ceph
This commit initialises a test ceph cluster inside a docker container for
testing storage inside the Single VM.   It also ensures that the container
and any volumes it contains are removed by the cleanup.sh script.

Signed-off-by: Mark Ryan <mark.d.ryan@intel.com>

--- a/testutil/singlevm/configuration.yaml
+++ b/testutil/singlevm/configuration.yaml
@@ -1,6 +1,8 @@
 configure:
   scheduler:
     storage_uri: /etc/ciao/configuration.yaml
+  storage:
+    ceph_id: ciao
   controller:
     compute_ca: /etc/pki/ciao/controller_cert.pem
     compute_cert: /etc/pki/ciao/controller_key.pem
