ansible: Remove roles from ansible galaxy
Remove roles from ansible-galaxy to remove 1 step from the
installation process.

Previuously the user had to clone the playbooks repository and then
install the roles from ansible galaxy.

Now the user clones the ciao repository and uses the playbooks
included within.

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/ciao_controllers.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao_controllers.yml
@@ -2,7 +2,7 @@
   - hosts: controllers
     become: yes
     roles:
-      - clearlinux.docker
-      - clearlinux.keystone
-      - clearlinux.ciao-controller
-      - clearlinux.ciao-webui
+      - docker
+      - keystone
+      - ciao-controller
+      - ciao-webui
