--- a/_DeploymentAndDistroPackaging/ansible/ciao_prepare.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao_prepare.yml
@@ -3,7 +3,7 @@
 - hosts: controllers
   become: yes
   roles:
-    - clearlinux.docker
+    - docker
   post_tasks:
     - name: Download container images in background
       docker_image: name={{ item }} state=present
