ansible: Update documentation to refer to ciao repo
Old documentation used to refer to github.com/clearlinux/clear-config-management
repository

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/meta/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Alberto Murillo
-  description: This role is a requirement for other clearlinux.ciao-* roles
+  description: This role is a requirement for other ciao-* roles
   company: Intel
 
   issue_tracker_url: https://github.com/01org/ciao
