--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ networking/libsnnet/tests/cncicli/cncicli
 networking/libsnnet/tests/cncli/cncli
 networking/libsnnet/tests/snnetcli/snnetcli
 test-cases/test-cases
+testutil/ciao-down/ciao-down
