ansible: Reload systemd before enabling services
A systemd unit is created to start ciao-webui and keystone docker
services at system boot.

This changes does a systemd daemon-reload before trying to enable
the service units.

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/tasks/main.yml
@@ -19,6 +19,8 @@
     template: src=docker-ciao-webui.service.j2 dest=/etc/systemd/system/docker-ciao-webui.service mode=0600
     notify: reload systemd config
 
+  - meta: flush_handlers
+
   - name: Enable docker-ciao-webui systemd unit
     service: name=docker-ciao-webui.service enabled=yes
 
