--- a/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/main.yml
@@ -22,6 +22,8 @@
     template: src=docker-keystone.service.j2 dest=/etc/systemd/system/docker-keystone.service mode=0600
     notify: reload systemd config
 
+  - meta: flush_handlers
+
   - name: Enable docker-keystone systemd unit
     service: name=docker-keystone.service enabled=yes
 
