travis: Test ansible playbook
Add a test in travis to check ansible playbook syntax

Fixes #790

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
   - go get github.com/pierrre/gotestcover
   - go get github.com/fzipp/gocyclo
   - go get github.com/gordonklaus/ineffassign
+  - pip install ansible
 
 # We need to create and install SSNTP certs for the SSNTP and controller tests
 before_script:
@@ -66,6 +67,8 @@ script:
    # verify ciao-controller api documentation can be generated with swagger
    - go get github.com/yvasiyarov/swagger
    - $GOPATH/bin/swagger  -apiPackage=github.com/01org/ciao/ciao-controller -mainApiFile=github.com/01org/ciao/ciao-controller/main.go -format=markdown -contentsTable=false -models=false -vendoringPath $HOME/gopath/src/github.com/01org/ciao/vendor
+   # Test ansible playbooks
+   - ansible-playbook -i _DeploymentAndDistroPackaging/ansible/tests/hosts _DeploymentAndDistroPackaging/ansible/ciao.yml --syntax-check
 
 after_success:
    - $GOPATH/bin/goveralls -service=travis-ci -coverprofile=/tmp/cover.out
