ansible: Enable ciao-image
This change creates the image service endpoints and service
and updates configuration.yaml to include image_service section.

Fixes #784

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/defaults/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/defaults/main.yml
@@ -56,24 +56,24 @@ ciao_openstack_services:
   - service: cinderv2
     type: volumev2
     description: CIAO Storage Service v2
+  - service: glance
+    type: image
+    description: CIAO Image Service
 
 # CIAO endpoints to create in Keystone
 ciao_openstack_endpoints:
   - service: ciao
     type: compute
     public_url: https://{{ ciao_controller_fqdn }}:8774/v2.1/%(tenant_id)s
-    internal_url: https://{{ ciao_controller_fqdn }}:8774/v2.1/%(tenant_id)s
-    admin_url: https://{{ ciao_controller_fqdn }}:8774/v2.1/%(tenant_id)s
   - service: cinder
     type: volume
     public_url: https://{{ ciao_controller_fqdn }}:8776/v1/%(tenant_id)s
-    internal_url: https://{{ ciao_controller_fqdn }}:8776/v1/%(tenant_id)s
-    admin_url: https://{{ ciao_controller_fqdn }}:8776/v1/%(tenant_id)s
   - service: cinderv2
     type: volumev2
     public_url: https://{{ ciao_controller_fqdn }}:8776/v2/%(tenant_id)s
-    internal_url: https://{{ ciao_controller_fqdn }}:8776/v2/%(tenant_id)s
-    admin_url: https://{{ ciao_controller_fqdn }}:8776/v2/%(tenant_id)s
+  - service: glance
+    type: image
+    public_url: https://{{ ciao_controller_fqdn }}:9292
 
 # Cephx user to authenticate
 ceph_id: admin
