ansible: Optionally skip ceph configuration on ciao nodes
Ciao requires a ceph cluster to be available for all ciao nodes.

The deployment playbook requires that the systadmin provides ceph
configuration and secret files in order to configure ceph on all
ciao nodes.

This changes introduces `skip_ceph` variable which allows the deployment
to skip ceph configuration and leave that step to be performed manually
by the sysadmin.

Fixes #782

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/defaults/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/defaults/main.yml
@@ -44,5 +44,8 @@ clear_cloud_image_url: https://download.clearlinux.org/releases/10820/clear/clea
 # Clearlinux cloud image file name
 clear_cloud_image: "{{ clear_cloud_image_url.split('/') | last | regex_replace('(.*).xz', '\\1') }}"
 
+# Set to true to skip ceph configuration in ciao nodes
+skip_ceph: False
+
 # cephx user
 cephx_user: admin
