ansible: Rework image manipulation
Images are now stored in /var/lib/ciao/images which is
a ceph fs shared across all ciao nodes removing the need
to copy images between nodes.

- Download OVMF.fd to /var/lib/ciao/images, ubuntu and fedora
  hosts can now link the file to /usr/share/qemu/OVMF.fd

- Download ClearLinux and Fedora images from ciao-controller.
  The images are saved in /var/lib/ciao/images removing the need
  to download the images into the deployment host to later transfer
  them to compute nodes.

- CNCI image are still being download into the deployment host
  in order to inject updated binaries and certificates. ciao-network
  later copies the image into the shared /var/lib/ciao/images filesystem

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-compute/tasks/images.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-compute/tasks/images.yml
@@ -13,27 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  - name: Create /usr/share/qemu directory
-    file: path=/usr/share/qemu state=directory
+  - block:
+      - name: Create /usr/share/qemu
+        file: path=/usr/share/qemu state=directory
 
-  - name: Download OVMF.fd
-    copy: src=images/OVMF.fd dest=/usr/share/qemu/OVMF.fd
+      - name: Create /usr/share/qemu/OVMF.fd
+        file: path=/usr/share/qemu/OVMF.fd src=/var/lib/ciao/images/OVMF.fd state=link
     when: ansible_os_family == "Debian" or ansible_os_family == "RedHat"
-
-  - name: Download Fedora Image
-    copy: src=images/{{ fedora_cloud_image }} dest=/var/lib/ciao/images/{{ fedora_cloud_image }}
-
-  - name: Link fedora image to its reference in the DB
-    file:
-      path: /var/lib/ciao/images/73a86d7e-93c0-480e-9c41-ab42f69b7799
-      src: /var/lib/ciao/images/{{ fedora_cloud_image }}
-      state: link
-
-  - name: Download ClearLinux Image
-    copy: src=images/{{ clear_cloud_image }} dest=/var/lib/ciao/images/{{ clear_cloud_image }}
-
-  - name: Link clear linux image to its reference in the DB
-    file:
-      path: /var/lib/ciao/images/df3768da-31f5-4ba6-82f0-127a1a705169
-      src: /var/lib/ciao/images/{{ clear_cloud_image }}
-      state: link
