ciao-controller: Change persistent data paths
In favor of cleaner deployment, we're changing default paths
for persistent data file of ciao-controller and ciao-image to
/var/lib/ciao/data directory.

It will create the directories in case that they don't exists.
In case of a diferent path is desired, ciao-controller command
will require the proper parameters to configure the paths.

Signed-off-by: Obed N Munoz <obed.n.munoz@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
@@ -34,6 +34,15 @@
     changed_when: "ciao_build_wait.stderr is defined and 'github.com/01org/ciao/' in ciao_build_wait.stderr"
     when: ciao_dev
 
+  - name: Create directories required by ciao-controller
+    file: path={{ item }} state=directory owner=ciao group=ciao
+    with_items:
+      - /var/lib/ciao/data
+      - /var/lib/ciao/data/controller
+      - /var/lib/ciao/data/controller/workloads
+      - /var/lib/ciao/data/controller/tables
+      - /var/lib/ciao/data/image
+
   - include: install.yml
 
   - include: certificates.yml
