--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
@@ -59,3 +59,20 @@
     with_items:
       - admin-ciaorc
       - demo-ciaorc
+
+  # TODO: (albertom) os_image module should be used as soon as ciao-image
+  # is compatible with shade
+  - include: upload_images.yml
+    connection: local
+    vars:
+      image: "{{ item }}"
+    with_items:
+      - name: "Clear Cloud"
+        file: "{{ clear_cloud_image }}"
+        id: df3768da-31f5-4ba6-82f0-127a1a705169
+      - name: "CNCI"
+        file: "{{ cnci_image }}"
+        id: 4e16e743-265a-4bf2-9fd1-57ada0b28904
+      - name: "Fedora 23 Cloud"
+        file: "{{ fedora_cloud_image }}"
+        id: 73a86d7e-93c0-480e-9c41-ab42f69b7799
