Kicking travis: DO NOT MERGE
Signed-off-by: Manohar Castelino <manohar.r.castelino@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,10 @@ before_script:
    - sudo update-ca-certificates
 
 script:
+   - cat /etc/lsb-release
+   - echo $PATH
+   - which dnsmasq
+   - dpkg -S `which dnsmasq`
    - go env
    - docker --version
    - sudo docker pull debian
