--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 go_import_path: github.com/01org/ciao
 
 before_install:
+  - sudo apt-get install dnsmasq-base
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
   - go get github.com/pierrre/gotestcover
