ansible: create ciao-launcher role
ciao-compute and ciao-network roles are basically the same with
minimal differences.

This change introduces ciao-launcher role that knows how to handle those
minimal differences and replaces ciao-compute and ciao-network roles.

Fixes #819

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/ciao_networks.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao_networks.yml
@@ -15,5 +15,7 @@
 
   - hosts: networks
     become: yes
+    vars:
+      ciao_role: network
     roles:
-      - ciao-network
+      - ciao-launcher
