--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/vars/network.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/vars/network.yml
@@ -13,5 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  - include: install.yml
-  - include: startservices.yml
+# Name of the network node agent key
+agent_key: cert-NetworkingAgent-localhost.pem
