--- a/_DeploymentAndDistroPackaging/ansible/ciao_computes.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao_computes.yml
@@ -15,6 +15,8 @@
 
   - hosts: computes
     become: yes
+    vars:
+      ciao_role: compute
     roles:
       - docker
-      - ciao-compute
+      - ciao-launcher
