--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/handlers/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/handlers/main.yml
@@ -13,17 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  - name: Copy CIAO Binaries
-    copy: src={{ gopath }}/bin/{{ item }} dest={{ bindir }}/{{ item }} mode=755
-    with_items:
-      - ciao-cert
-      - ciao-cli
-      - ciao-launcher
-    when: ciao_dev
-    notify: restart compute
-
-  - name: Copy Compute Node Agent Key
-    copy: src=certificates/ciao/{{ item }} dest=/etc/pki/ciao/{{ item }}
-    with_items:
-      - CAcert-{{ ciao_controller_fqdn }}.pem
-      - cert-CNAgent-localhost.pem
+  - name: restart launcher
+    service: name=ciao-launcher.service enabled=yes state=restarted
