ansible: Make sure the deployment node is using the correct ciao-cli binary
If ciao is installed from packages, the ciao-cli binary will be retrieved from
the controller node. Otherwise, the ciao-cli from the local GOPATH will be used.

Signed-off-by: Erick Cardona <erick.cardona.ruiz@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/build.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/build.yml
@@ -42,6 +42,7 @@
         with_items:
           - ciao-cert
           - ciao-cnci-agent
+          - ciao-cli
 
       - name: Make ciao files runnable
         connection: local
@@ -49,4 +50,5 @@
         with_items:
           - ciao-cert
           - ciao-cnci-agent
+          - ciao-cli
     when: not ciao_dev
