--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
@@ -67,12 +67,12 @@
     vars:
       image: "{{ item }}"
     with_items:
-      - name: "Clear Cloud"
+      - name: '"Clear Cloud"'
         file: "{{ clear_cloud_image }}"
         id: df3768da-31f5-4ba6-82f0-127a1a705169
       - name: "CNCI"
         file: "{{ cnci_image }}"
         id: 4e16e743-265a-4bf2-9fd1-57ada0b28904
-      - name: "Fedora 24 Cloud"
+      - name: '"Fedora 24 Cloud"'
         file: "{{ fedora_cloud_image }}"
         id: 73a86d7e-93c0-480e-9c41-ab42f69b7799
