--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,14 @@ script:
    - go list ./... | grep -v github.com/01org/ciao/vendor | xargs go list -f '{{.Dir}}' | xargs gocyclo -over 15
    - go list ./... | grep -v github.com/01org/ciao/vendor | xargs go list -f '{{.Dir}}' | xargs -L 1 ineffassign
    - go list ./... | grep -v github.com/01org/ciao/vendor | xargs go list -f '{{.Dir}}' | xargs gofmt -s -l | wc -l | xargs -I % bash -c "test % -eq 0"
+   - cd _release/bat
+   - go list ./... | xargs -t go vet
+   - go list ./... | xargs -tL 1 golint -set_exit_status
+   - go list ./... | xargs go list -f '{{.Dir}}/*.go' | xargs -I % bash -c "misspell -error %"
+   - go list ./... | xargs go list -f '{{.Dir}}' | xargs gocyclo -over 15
+   - go list ./... | xargs go list -f '{{.Dir}}' | xargs -L 1 ineffassign
+   - go list ./... | xargs go list -f '{{.Dir}}' | xargs gofmt -s -l | wc -l | xargs -I % bash -c "test % -eq 0"
+   - cd ../..
    - sudo mkdir -p /var/lib/ciao/instances
    - sudo mkdir -p /var/lib/ciao/data/controller/{workloads,tables}
    - sudo chmod 0777 -R /var/lib/ciao
