ansible: Install ciao-launcher and ciao-controller packages on Ubuntu and Fedora
Since release 81, Ubuntu and Fedora packages install their dependencies.

- Install ciao-launcher package on compute and network nodes
- Install ciao-controller package on controller nodes
- Remove ciao_wait.yml

Fixes #899

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -123,7 +123,7 @@
             - qemu-system-x86
             - psmisc
             - docker-engine
-            - ciao
+            - ciao-common
 
         - name: Uninstall dependencies (Fedora)
           command: dnf autoremove -y
@@ -136,7 +136,7 @@
         - qemu-system-x86
         - psmisc
         - docker.io
-        - ciao
+        - ciao-common
       when: ansible_os_family == "Debian"
 
     - block:
