--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/install.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/install.yml
@@ -13,6 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+  - name: Install ciao-controller
+    package: name=ciao-controller state=present
+    when: ansible_os_family == "Debian" or ansible_os_family == "RedHat"
+
+  - include: build.yml
+    become: no
+
   - name: Install CIAO binaries
     copy: src={{ gopath }}/bin/{{ item }} dest={{ bindir }}/{{ item }} mode=755
     with_items:
