ansible: Replace ansible `service` module with `systemd`
systemd module (new in ansible 2.2) has the daemon_reload option which
reloads systemd unit files before applying a configuration removing the
need of the `reload systemd config` handler.

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -39,12 +39,13 @@
         - ciao-keystone
 
     - name: Stop and disable services
-      service: name={{ item }} state=stopped enabled=no
+      systemd: name={{ item }} state=stopped enabled=no
       with_items:
         - docker-keystone.service
         - docker-ciao-webui.service
         - ciao-controller.service
         - ciao-scheduler.service
+      ignore_errors: yes
 
     - name: Remove Files
       file: name={{ item }} state=absent
@@ -60,10 +61,8 @@
 - hosts: controllers:computes:networks
   become: yes
   tasks:
-    # In ansible 2.2.0 we can drop ignore errors since it will not fail
-    # when the services does not exist.
     - name: Stop services
-      service: name={{ item }} enabled=no state=stopped
+      systemd: name={{ item }} enabled=no state=stopped
       with_items:
         - ciao-network.service
         - ciao-compute.service
