--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/startservices.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/startservices.yml
@@ -16,13 +16,11 @@
   - name: Create scheduler unit
     template: src=ciao-scheduler.service.j2 dest=/etc/systemd/system/ciao-scheduler.service
     notify:
-      - reload systemd config
       - restart scheduler
 
   - name: Create controller unit
     template: src=ciao-controller.service.j2 dest=/etc/systemd/system/ciao-controller.service
     notify:
-      - reload systemd config
       - restart controller
 
   - name: Copy tables/workload files
@@ -43,7 +41,7 @@
   - meta: flush_handlers
 
   - name: Ensure controller services are running
-    service: name={{ item }} enabled=yes state=started
+    systemd: name={{ item }} enabled=yes state=started
     with_items:
       - ciao-scheduler.service
       - ciao-controller.service
