--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/tasks/main.yml
@@ -17,12 +17,9 @@
 
   - name: Create docker-ciao-webui systemd unit
     template: src=docker-ciao-webui.service.j2 dest=/etc/systemd/system/docker-ciao-webui.service mode=0600
-    notify: reload systemd config
-
-  - meta: flush_handlers
 
   - name: Enable docker-ciao-webui systemd unit
-    service: name=docker-ciao-webui.service enabled=yes
+    systemd: name=docker-ciao-webui.service enabled=yes daemon-reload=yes
 
   - name: Start ciao-webui container
     docker_container:
