--- a/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/main.yml
@@ -20,12 +20,9 @@
 
   - name: Create docker-keystone systemd unit
     template: src=docker-keystone.service.j2 dest=/etc/systemd/system/docker-keystone.service mode=0600
-    notify: reload systemd config
-
-  - meta: flush_handlers
 
   - name: Enable docker-keystone systemd unit
-    service: name=docker-keystone.service enabled=yes
+    systemd: name=docker-keystone.service enabled=yes daemon_reload=yes
 
   - name: Start keystone container
     docker_container:
