travis: Explicitly go get github.com/gorilla/context
This is necessary to make the goswagger builds pass.  Goswagger does
not handle vendored packages correctly and so it thinks
github.com/gorilla/context is required when in fact it is not (it's
only needed with version of go 1.6 and older which we do not support).

Signed-off-by: Mark Ryan <mark.d.ryan@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ script:
    # API Documentation is automated by swagger, every PR will verify the documentation can be generated
    # verify ciao-controller api documentation can be generated with swagger
    - go get golang.org/x/sys/unix
+   - go get github.com/gorilla/context
    - go get github.com/yvasiyarov/swagger
    - $GOPATH/bin/swagger  -apiPackage=github.com/01org/ciao/ciao-controller -mainApiFile=github.com/01org/ciao/ciao-controller/main.go -format=markdown -contentsTable=false -models=false -vendoringPath $HOME/gopath/src/github.com/01org/ciao/vendor
    # Test ansible playbooks
