--- a/ciao-cli/examples/fedora_cloud_disk.yaml
+++ b/ciao-cli/examples/fedora_cloud_disk.yaml
@@ -1,12 +1,16 @@
 description: "Fedora VM with attached empty storage"
 vm_type: qemu
 fw_type: legacy
-image_id: "73a86d7e-93c0-480e-9c41-ab42f69b7799"
 defaults:
     vcpus: 2
     mem_mb: 512
     disk_mb: 1024
 cloud_init: "fedora_vm.yaml"
 disks:
+- source:
+    service: image
+    id: "73a86d7e-93c0-480e-9c41-ab42f69b7799"
+  bootable: true
+  ephemeral: true
 - size: 20
   ephemeral: true
