ansible: Remove support for installing from packages
* Remove ciao package installation
* Remove ciao_dev option

Fixes #1086

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/install.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/install.yml
@@ -13,21 +13,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  - name: Install ciao-controller
-    package: name=ciao-controller state=present
-    when: ansible_os_family == "Debian" or ansible_os_family == "RedHat"
-
-  - include: build.yml
-    become: no
-
   - name: Install CIAO binaries
-    copy: src={{ gopath }}/bin/{{ item }} dest={{ bindir }}/{{ item }} mode=755
+    copy: src={{ gopath }}/bin/{{ item }} dest=/usr/local/bin/{{ item }} mode=755
     with_items:
-      - ciao-cert
       - ciao-cli
       - ciao-controller
       - ciao-scheduler
-    when: ciao_dev
     notify:
       - restart scheduler
       - restart controller
