--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/certificates.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/certificates.yml
@@ -18,14 +18,11 @@
     connection: local
     file: path=certificates/ciao state=directory
 
-  - name: Set ciao-cert location
-    set_fact: ciao_cert={{ (gopath + '/bin/ciao-cert') if ciao_dev else '../../fetch/ciao-cert' }}
-
   - name: Create Scheduler key and CA certificate
     become: no
     connection: local
     command: >
-      {{ ciao_cert }} -anchor -role scheduler
+      {{ gopath }}/bin/ciao-cert -anchor -role scheduler
       -email={{ ciao_admin_email }} -organization="{{ ciao_cert_organization }}"
       -ip={{ ciao_controller_ip }} -host={{ ciao_controller_fqdn }} -verify
     args:
@@ -36,7 +33,7 @@
     become: no
     connection: local
     command: >
-      {{ ciao_cert }} -role {{ item.role }} --anchor-cert
+      {{ gopath }}/bin/ciao-cert -role {{ item.role }} --anchor-cert
       cert-Scheduler-{{ ciao_controller_fqdn }}.pem -email={{ ciao_admin_email }}
       --organization="{{ ciao_cert_organization }}" -host=localhost -verify
     args:
