--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
@@ -13,6 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+  - include: build.yml
+    become: no
+    connection: local
+
   - include: install.yml
 
   - include: images.yml
@@ -21,17 +25,6 @@
 
   - include: endpoints.yml
     connection: local
-
-  - name: Wait for ciao build
-    become: no
-    connection: local
-    async_status:
-      jid: "{{ ciao_build.ansible_job_id }}"
-    register: ciao_build_wait
-    until: ciao_build_wait.finished
-    retries: 30
-    changed_when: "ciao_build_wait.stderr is defined and 'github.com/01org/ciao/' in ciao_build_wait.stderr"
-    when: ciao_dev
 
   - name: Create directories required by ciao-controller
     file: path={{ item }} state=directory owner=ciao group=ciao
