ansible: Install controller and launcher dependencies
* Add distribution specific variable file in ciao-common containing
controller_deps and launcher_deps variables
* Use controller_deps on ciao-controller to install controller dependencies
* Use launcher_deps on ciao-launcher to install launcher dependencies

Fixes #1090
Fixes #1092

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/main.yml
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+  - include_vars: "{{ ansible_os_family.split(' ') | first }}.yml"
+
   - name: Create CIAO user
     user:
       name: ciao
