--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/install.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/install.yml
@@ -13,6 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+  - name: Install controller dependencies
+    package: name={{ item }} state=present
+    with_items: "{{ controller_deps }}"
+    when: "'Clear linux' not in ansible_os_family"
+
+  - name: Install controller dependencies (ClearLinux)
+    swupd: name={{ item }} state=present
+    with_items: "{{ controller_deps }}"
+    when: "'Clear linux' in ansible_os_family"
+
   - name: Install CIAO binaries
     copy: src={{ gopath }}/bin/{{ item }} dest=/usr/local/bin/{{ item }} mode=755
     with_items:
