ansible: Install ClearLinux OVMF firmware on launcher
Use the customized OVMF.fd firmware from ClearLinux rather than
the one provided by fedora/ubuntu.

Fixes #1089

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/tasks/install.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/tasks/install.yml
@@ -36,3 +36,6 @@
       - CAcert-{{ ciao_controller_fqdn }}.pem
       - "{{ agent_key }}"
     notify: restart launcher
+
+  - name: Copy OVMF firmware
+    copy: src=images/OVMF.fd dest=/usr/share/qemu/OVMF.fd
