ansible: Add support for Yakkety on docker role
Add support for Yakkety on docker role

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/docker/meta/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/docker/meta/main.yml
@@ -27,7 +27,8 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-      - xenial
+      - Xenial
+      - Yakkety
   - name: Fedora
     versions:
       - 24
@@ -38,7 +39,6 @@ galaxy_info:
 
   galaxy_tags:
     - ubuntu
-    - xenial
     - clearlinux
     - fedora
     - docker
