ansible: Allow dual node in ciao-launcher
If a node is in both [networks] and [computes] sections, start
launcher as dual node.

This allows the scripts to be used for singlevm

Fixes #1081

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/certificates.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/certificates.yml
@@ -43,6 +43,8 @@
         creates: cert-CNCIAgent-localhost.pem
       - role: controller
         creates: cert-Controller-localhost.pem
+      - role: agent,netagent
+        creates: cert-CNAgent-NetworkingAgent-localhost.pem
 
   - name: Copy certificates
     copy: src={{ workdir }}/{{ item }} dest=/etc/pki/ciao/{{ item }} owner=ciao mode=400
