ansible: Use keystone:stable container
Use clearlinux/keystone:stable container rather than
clearlinux/keystone:latest

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/keystone/tasks/main.yml
@@ -27,7 +27,7 @@
   - name: Start keystone container
     docker_container:
       name: ciao-keystone
-      image: clearlinux/keystone
+      image: clearlinux/keystone:stable
       state: started
       privileged: True
       etc_hosts: "{{ etc_hosts }}"
