--- a/_DeploymentAndDistroPackaging/ansible/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao.yml
@@ -13,6 +13,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+- hosts: localhost
+  connection: local
+  tasks:
+    - name: Create workdir
+      file: name={{ workdir }} state=directory mode=700
+
 - include: ciao_prepare.yml
 - include: ciao_controllers.yml
 - include: ciao_networks.yml
